resources/app-sre-stage/vault-dev/vault.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-devshiftnet-dns
  labels:
    service: vault
  name: vault-dev
spec:
  host: vault.dev.devshift.net
  port:
    targetPort: https
  to:
    kind: Service
    name: vault
    weight: 100
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
